--- a/index.html
+++ b/index.html
@@ -41,6 +41,63 @@
       <h2>Добро пожаловать!</h2>
       <p>Психическая активность — это не просто результат биохимических процессов, но сложная сеть энергии и вибраций, взаимодействующая с тонкими слоями реальности.</p>
     </section>
+     <!-- === НАЧАЛО: Курс Парапсихология и Поле Пси === -->
+<section id="psi-course" style="background:#0a0a0a;color:#f1e6c8;padding:60px 20px;border-radius:12px;max-width:950px;margin:60px auto;font-family:'Segoe UI',Tahoma,Verdana,sans-serif;box-shadow:0 0 30px rgba(212,175,55,0.15);line-height:1.6">
+  <h2 style="color:#c8a45d;text-align:center;font-size:2.4em;margin-bottom:15px;">Курс «Парапсихология»</h2>
+  <p style="text-align:center;color:#d4cfa8;font-size:1.1em;max-width:780px;margin:0 auto 40px;">
+    Годовая программа духовного и психоэнергетического развития.  
+    Каждая лекция рассчитана на <strong>1 месяц обучения</strong> — по <strong>1,5 часа в неделю</strong> (6 часов в месяц - стоимость курса 140£ / месяц).  
+    Это позволяет глубоко проработать материал и пройти личные энергетические изменения.
+  </p>
+
+  <div>
+    <h3 style="color:#c8a45d;">Программа курса</h3>
+    <ul style="list-style:none;padding-left:0;line-height:1.6">
+      <li><strong>1.</strong> Что такое парапсихология и поле Пси</li>
+      <li><strong>2.</strong> Сознание, мозг и токи мысли</li>
+      <li><strong>3.</strong> Материя как форма энергии</li>
+      <li><strong>4.</strong> Энергия и её преобразования</li>
+      <li><strong>5.</strong> Гравитация — сила единства</li>
+      <li><strong>6.</strong> Космическая праэнергия и нейтрино</li>
+      <li><strong>7.</strong> Энергетическое тело человека (аура)</li>
+      <li><strong>8.</strong> Телепатия и мысленное взаимодействие</li>
+      <li><strong>9.</strong> Ясновидение и расширение восприятия</li>
+      <li><strong>10.</strong> Психокинез и управление материей</li>
+      <li><strong>11.</strong> Медитация, воля и духовная энергия</li>
+      <li><strong>12.</strong> Пси и духовная этика</li>
+    </ul>
+  </div>
+
+  <hr style="border:none;border-top:1px solid rgba(255,255,255,0.1);margin:40px 0">
+
+  <div style="display:grid;gap:20px;">
+    <div style="background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;">
+      <h4 style="color:#c8a45d;margin-top:0;">🧠 Токи мозга</h4>
+      <p>Мозг — электрохимическая система. Состояния сознания определяются частотами электрических импульсов. Управление дыханием и вниманием позволяет изменять мозговые ритмы, открывая доступ к Пси-полю.</p>
+    </div>
+
+    <div style="background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;">
+      <h4 style="color:#c8a45d;margin-top:0;">⚛️ Материя</h4>
+      <p>Материя — форма энергии, рожденная в космосе. Атомы и элементы связаны в единое энергетическое поле. Всё существующее построено из одной первоосновы — энергии.</p>
+    </div>
+
+    <div style="background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;">
+      <h4 style="color:#c8a45d;margin-top:0;">⚡ Энергия</h4>
+      <p>Энергия — способность изменять состояние материи. Закон сохранения энергии и формула E=mc² показывают: материя и энергия — одно и то же в разных состояниях.</p>
+    </div>
+
+    <div style="background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;">
+      <h4 style="color:#c8a45d;margin-top:0;">🌍 Гравитация</h4>
+      <p>Гравитация — сила притяжения и символ духовного единства. Она соединяет все уровни существования и отражает внутреннее стремление духа к источнику.</p>
+    </div>
+
+    <div style="background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;">
+      <h4 style="color:#c8a45d;margin-top:0;">🔮 Поле Пси</h4>
+      <p>Пси — универсальное энергоинформационное поле. Оно связывает сознание с энергией Вселенной, делая возможными телепатию, ясновидение и психокинез. Через концентрацию, дыхание и медитацию человек настраивается на частоты Пси-поля.</p>
+    </div>
+  </div>
+</section>
+<!-- === КОНЕЦ: Курс Парапсихология и Поле Пси === -->
 <section id="parapsychology-history" style="background-color: #111; color: #f0e6d2; padding: 50px 20px; line-height: 1.7; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-radius: 10px; max-width: 900px; margin: 50px auto;">
   <h2 style="color: #f0e6d2; font-size: 2em; margin-bottom: 20px; text-align: center;">История парапсихологии и области исследований</h2>
   <p>
