--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
   </p>
 
   <div>
-    <h3 style="color:#c8a45d;">Программа курса</h3>
-    <ul style="list-style:none;padding-left:0;line-height:1.6">
-      <li><strong>1.</strong> Что такое парапсихология и поле Пси</li>
-      <li><strong>2.</strong> Сознание, мозг и токи мысли</li>
-      <li><strong>3.</strong> Материя как форма энергии</li>
-      <li><strong>4.</strong> Энергия и её преобразования</li>
-      <li><strong>5.</strong> Гравитация — сила единства</li>
-      <li><strong>6.</strong> Космическая праэнергия и нейтрино</li>
-      <li><strong>7.</strong> Энергетическое тело человека (аура)</li>
-      <li><strong>8.</strong> Телепатия и мысленное взаимодействие</li>
-      <li><strong>9.</strong> Ясновидение и расширение восприятия</li>
-      <li><strong>10.</strong> Психокинез и управление материей</li>
-      <li><strong>11.</strong> Медитация, воля и духовная энергия</li>
-      <li><strong>12.</strong> Пси и духовная этика</li>
-    </ul>
+    <h3> В программе курса</h3>
+  <ul class="program">
+    Введение в парапсихологию</span> — понятие Пси, история и цели науки, энергетическая этика</li>
+    <li><span> Сознание и мозговые токи</span> — биоэлектрические процессы мозга, дыхание и изменение сознания.</li>
+    <li><span> Материя как форма энергии</span> — структура атома, взаимосвязь духа и формы.</li>
+    <li><span> Энергия жизни</span> — прана, оргон, ки, эфир, балансировка жизненной силы.</li>
+    <li><span> Гравитация и законы притяжения</span> — физика и духовный смысл притяжения, состояние лёгкости.</li>
+    <li><span> Космическая праэнергия</span> — взаимодействие человека с космосом, нейтрино и резонанс.</li>
+    <li><span> Энергетическое тело и аура</span> — чакры, уровни сознания, восприятие и защита ауры.</li>
+    <li><span> Телепатия</span> — настройка сознаний, передача мыслеформ, упражнения для тренировки.</li>
+    <li><span> Ясновидение</span> — внутренний экран, символическое восприятие, развитие интуитивного зрения.</li>
+    <li><span> Психокинез</span> — воля и концентрация как источник воздействия на материю.</li>
+    <li><span> Медитация и воля</span> — развитие внутреннего центра силы, гармонизация сознания и тела.</li>
+    <li><span> Энергетическая этика</span> — безопасность и ответственность, карма, служение и зрелость.</li>
+  </ul>
   </div>
 
   <hr style="border:none;border-top:1px solid rgba(255,255,255,0.1);margin:40px 0">
