--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div>
     <h3> В программе курса</h3>
   <ul class="program">
-    Введение в парапсихологию</span> — понятие Пси, история и цели науки, энергетическая этика</li>
+    <li><span>Введение в парапсихологию</span> — понятие Пси, история и цели науки, энергетическая этика</li>
     <li><span> Сознание и мозговые токи</span> — биоэлектрические процессы мозга, дыхание и изменение сознания.</li>
     <li><span> Материя как форма энергии</span> — структура атома, взаимосвязь духа и формы.</li>
     <li><span> Энергия жизни</span> — прана, оргон, ки, эфир, балансировка жизненной силы.</li>
