--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
   <main>
     <section>
       <h2>Моя история</h2>
-      <p>Меня зовут Евгений Тимощенко. С раннего детства меня привлекали тайны сознания и взаимодействие человека с энергетическим полем. Первое предсказание по линиям на ладони сделал для своей тёти — и, к сожалению, оно сбылось. Тогда в руки впервые попала старая книга по хиромантии советского издания. Я отнёсся к этому несерьёзно… но именно с этого всё началось.</p>
+      <p>Меня зовут Евгений. С раннего детства меня привлекали тайны сознания и взаимодействие человека с энергетическим полем. Первое предсказание по линиям на ладони сделал для своей тёти — и, к сожалению, оно сбылось. Тогда в руки впервые попала старая книга по хиромантии советского издания. Я отнёсся к этому несерьёзно… но именно с этого всё началось.</p>
       <p>Позже появились книги по магии и эзотерике, первые посвящения — в бане, на перекрёстках, работа с биополем друзей. И, как ни странно, всё это действительно начало давать результаты.</p>
       <p>Первого духа я увидел после смерти своей бабушки — я отчётливо видел её образ, уже зная, что она умерла. Страх перед встречами с духами я ощущаю до сих пор — и, возможно, именно это чувство помогает сохранять уважение к невидимому миру.</p>
       <p>Первый выход в астрал произошёл у меня в юношестве  — неожиданно, с сильным шумом и страхом. Сегодня я туда не «хожу», но умею работать с астральным пространством осознанно, когда это нужно.</p>
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
