--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
     </div>
     <!-- Дипломы -->
     <div class="gallery-item">
-      <img src="diploma1.jpg" alt="Диплом" />
+      <img src="parapsy.png" alt="Диплом" />
       <p>Диплом по Парапсихологии</p>
     </div>
     <div class="gallery-item">
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
