--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
     <!-- Дипломы -->
     <div class="gallery-item">
       <img src="parapsy.png" alt="Диплом" />
-      <p>Диплом по Парапсихологии</p>
+      <p>Сертификат Парапсихолога</p>
     </div>
     <div class="gallery-item">
       <img src="diploma2.jpg" alt="Диплом" />
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
