--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
     <div class="section-divider"></div>
 
 <section>
-  <h2>Фото и дипломы</h2>
+  <h2>Путь профессионального развития </h2>
   <div class="gallery">
     <!-- Фото -->
     <div class="gallery-item">
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
