--- a/schedule.html
+++ b/schedule.html
@@ -36,7 +36,7 @@
        
 
         <div class="schedule-row">
-          <div> с 5 января 2026</div>
+          <div>  2 февраля 2026</div>
           <div>08:30 – 10:00</div>
           <div>Парапсихология</div>
           <div>Онлайн</div>
