Revise content and structure in about.html
Updated content and structure in the about.html file, enhancing the descriptions of personal experience and practices.

--- a/about.html
+++ b/about.html
@@ -94,12 +94,13 @@
   <main>
     <section>
       <h2>Моя история</h2>
-      <p>Меня зовут Евгений. Я интегративный психолог с трансперсональным и глубинным фокусом. Работаю со взрослыми 30–60 лет, переживающими жизненные переходы, кризисы идентичности, миграционный стресс, утрату смысла и эмоциональное выгорание.</p>
+      <p>Меня зовут Евгений. Я практик в области личностного развития и исследования сознания с интегративным и трансперсональным подходом. Я работаю со взрослыми людьми (30–60 лет), которые проходят жизненные переходы, ищут новые смыслы, адаптируются к изменениям и стремятся к более глубокому пониманию себя и своего жизненного пути.</p>
 
-<p>В своей практике я объединяю современные методы психологии, глубинную и экзистенциальную терапию, а также символическую работу. Помогаю осознавать бессознательные паттерны, находить внутренние ресурсы и выстраивать более целостную, осмысленную и устойчивую жизнь.</p>
+<p>В своей работе я опираюсь на современные психологические знания, символическую и рефлексивную практику, а также методы осознанности и внутреннего исследования. Я помогаю клиентам лучше понимать свои внутренние процессы, распознавать повторяющиеся жизненные паттерны и находить личные ресурсы для устойчивых изменений и личностного роста.</p>
 
-<p>Я создаю безопасное, поддерживающее и конфиденциальное пространство для личного роста и внутренних изменений.</p>
+<p>Я создаю уважительное, поддерживающее и конфиденциальное пространство, направленное на самоисследование, личностное развитие и интеграцию жизненного опыта.</p>
 
+<p><strong>Важно:</strong> предоставляемые сессии направлены на личностное развитие и самоисследование и не являются психологической или медицинской терапией, диагностикой или лечением.</p>
 
 
     </section>
@@ -173,6 +174,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
